cabal-version: 3.0
name:          country-code-generation
version:       0.1.0.0
homepage:      https://github.com/byteverse/country
bug-reports:   https://github.com/byteverse/country/issues
license:       BSD-3-Clause
license-file:  LICENSE
author:        Andrew Martin
maintainer:    amartin@layer3com.com
copyright:     2017 Andrew Martin
category:      Web
build-type:    Simple

common build-settings
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages

executable country-code-generation
  import:         build-settings
  ghc-options:    -O2
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , base                  <5.0
    , bytestring            >=0.10
    , colonnade             >=1.2.0.1
    , containers
    , disjoint-containers   >=0.3
    , primitive
    , siphon                >=0.8.1
    , streaming
    , streaming-bytestring
    , text                  >=1.2     && <2.1
    , transformers

source-repository head
  type:     git
  location: git://github.com/byteverse/country.git
