name: country
version: 0.1.6
synopsis: Country data type and functions
description:
  The `country` library provides a data type for dealing with
  the set of countries as defined by ISO 3166. The representation
  is compact and is well-suited to use with vectors and
  primitive arrays. Additionally, this library exports functions 
  that provide the following encodings and decodings:
  .
  * ISO Alpha-2 (two-letter country code)
  .
  * ISO Alpha-3 (three-letter country code)
  .
  * ISO Numeric (three-digit country code)
  .
  . 
  The main differences between this library and `iso3166-country-codes` are:
  .
  * it doesn't use an ADT to represent countries, instead it uses the country's three-digit country code.
  .
  * it doesn't use `String` for encoding/decoding
  .
  * it provides two-alpha and three-alpha country codes.
  .
  * it provides `Prim` instances from the `primitive` package to allow types to be used in unboxed vectors/arrays.
  .
  * BSD3 licence instead of LGPL
  .
  Please open up an issue on github if there is anything
  you would like to see added.
homepage: https://github.com/andrewthad/country#readme
license: BSD3
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2017 Andrew Martin
category: Web
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    Country
    Country.Identifier
    Country.Unsafe
  other-modules:
    Country.Unexposed.Encode.English
    Country.Unexposed.Names
    Country.Unexposed.Trie
    Country.Unexposed.TrieByte
    Country.Unexposed.Alias
  build-depends:
      base >= 4.9.1.0 && < 4.12
    , text >= 1.2 && < 1.3
    , bytestring >= 0.10 && < 0.11
    , deepseq >= 1.3.0.2 && < 1.5
    , primitive >= 0.6.1 && < 0.7
    , unordered-containers >= 0.2 && < 0.3
    , ghc-prim >= 0.5 && < 0.6
    , hashable >= 1.2 && < 1.3
    , aeson >= 0.11 && < 1.5
    , scientific >= 0.3 && < 0.4
    , attoparsec >= 0.13 && < 0.14
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      base
    , country
    , tasty
    , tasty-quickcheck
    , quickcheck-classes
    , QuickCheck
  ghc-options: -O2
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewthad/country
