cabal-version: 2.2
name: country
version: 0.2.2
synopsis: Country data type and functions
description:
  The `country` library provides a data type for dealing with
  the set of countries as defined by ISO 3166. The representation
  is compact and is well-suited to use with vectors and
  primitive arrays. Additionally, this library exports functions
  that provide the following encodings and decodings:
  .
  * ISO Alpha-2 (two-letter country code)
  .
  * ISO Alpha-3 (three-letter country code)
  .
  * ISO Numeric (three-digit country code)
  .
  .
  The main differences between this library and `iso3166-country-codes` are:
  .
  * it doesn't use an ADT to represent countries, instead it uses the country's three-digit country code.
  .
  * it doesn't use `String` for encoding/decoding
  .
  * it provides two-alpha and three-alpha country codes.
  .
  * it provides `Prim` instances from the `primitive` package to allow types to be used in unboxed vectors/arrays.
  .
  * BSD3 licence instead of LGPL
  .
  Please open up an issue on github if there is anything
  you would like to see added.
homepage: https://github.com/andrewthad/country#readme
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2017 Andrew Martin
category: Web
build-type: Simple
extra-source-files: README.md
tested-with: GHC==8.10.1, GHC==8.8.3, GHC==8.6.5, GHC==8.4.4

library
  hs-source-dirs: src
  exposed-modules:
    Continent
    Continent.Unsafe
    Country
    Country.Identifier
    Country.Subdivision
    Country.Unsafe
  other-modules:
    Country.Unexposed.Alias
    Country.Unexposed.AlphaTwoPtr
    Country.Unexposed.Continents
    Country.Unexposed.Encode.English
    Country.Unexposed.Names
    Country.Unexposed.Subdivision
    Country.Unexposed.Trie
    Country.Unexposed.TrieByte
    Country.Unexposed.Util
  build-depends:
    , aeson >=1.2 && <2.2
    , attoparsec >=0.13 && <0.15
    , base >=4.12 && <5
    , bytebuild >=0.3.4 && <0.4
    , bytehash >=0.1 && <0.2
    , byteslice >=0.2.3 && <0.3
    , bytestring >= 0.10 && <0.12
    , contiguous >=0.6.1
    , deepseq >= 1.3.0.2 && <1.5
    , entropy >=0.4.1.5 && <0.5
    , hashable >=1.2 && <1.5
    , primitive >= 0.6.4 && <0.8
    , primitive-unlifted >= 0.1.3 && <1.0
    , scientific >=0.3 && <0.4
    , text >= 1.2 && <1.3
    , text-short >=0.1.3
    , unordered-containers >=0.2 && <0.3
  default-language: Haskell2010
  ghc-options: -Wall -O2

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    , QuickCheck
    , base
    , byteslice
    , country
    , primitive
    , quickcheck-classes >=0.6.4
    , tasty
    , tasty-quickcheck
    , text
    , text-short
  ghc-options: -O2
  default-language: Haskell2010

benchmark bench
  type: exitcode-stdio-1.0
  build-depends:
    , country
    , base
    , byteslice
    , bytestring
    , gauge
    , primitive
    , text >=1.2
  ghc-options: -Wall -O2
  default-language: Haskell2010
  hs-source-dirs: bench
  main-is: Main.hs

benchmark bench-size
  type: exitcode-stdio-1.0
  build-depends:
    , country
    , base
    , bytestring
    , compact
    , bytehash
  ghc-options: -Wall -O2
  default-language: Haskell2010
  hs-source-dirs: bench
  main-is: Size.hs

source-repository head
  type:     git
  location: https://github.com/andrewthad/country
